cw-envoy-proxy-test.yaml
node:
  cluster: cw-test-cluster
  id: cw-test-id
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - name: backend
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
      - interval: 2s
        timeout: 3s
        no_traffic_interval: 4s
        no_traffic_healthy_interval: 4s
        unhealthy_threshold: 1
        healthy_threshold: 1
        http_health_check:
          path: "/"
    load_assignment:
      cluster_name: backend
      endpoints:
        lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: backend-1
                  port_value: 8000
              health_check_config:
                port_value: 8000
              hostname: backend-1
          - endpoint:
              address:
                socket_address:
                  address: backend-2
                  port_value: 8000
              health_check_config:
                port_value: 8000
              hostname: backend-12
          - endpoint:
              address:
                socket_address:
                  address: backend-3
                  port_value: 8000
              health_check_config:
                port_value: 8000
              hostname: backend-3
          - endpoint:
              address:
                socket_address:
                  address: backend-4
                  port_value: 8000
              health_check_config:
                port_value: 8000
              hostname: backend-4
